Bug 915081 - Hide the end-and-answer button during CDMA call waiting r=etienne
- Removed the end-and-answer button when in CDMA call waiting mode as it
  does not support ending the first call and answering the other one,
  the hold-and-answer button is enlarged to fill up the entire container
  under these conditions
- Added unit-tests covering the changes

--- a/apps/communications/dialer/style/oncall_status_bar.css
+++ b/apps/communications/dialer/style/oncall_status_bar.css
@@ -121,4 +121,8 @@
     display: none;
   }
 
+  #calls > section .switch-calls {
+    display: none;
+  }
+
 }
